# sifir

./: README.md
.github/workflows/: ci.yml
docs/: architecture.md  governance.md  hardware.md  threat-model.md  token-economics.md
poc/: Cargo.toml  DEVIATIONS.md  PLAN.md  TESTING.md
poc/crates/sifir-attest/: Cargo.toml
poc/crates/sifir-attest/src/: amd_certs.rs  attest_ext.rs  lib.rs  mock.rs  report.rs  verify.rs
poc/crates/sifir-client/: Cargo.toml
poc/crates/sifir-client/src/: gpu_verify.rs  main.rs  request.rs  verifier.rs
poc/crates/sifir-server/: Cargo.toml
poc/crates/sifir-server/src/: amd_attestation.rs  attest_ext.rs  gpu_attestation.rs  main.rs  proxy.rs  tls.rs
poc/inference/: gpu_attest.py  requirements.txt  server.py
