[workspace]
members = [
    "crates/sifir-attest",
    "crates/sifir-server",
    "crates/sifir-client",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Crypto
p384 = { version = "0.13", features = ["ecdsa", "pem"] }
ecdsa = { version = "0.16", features = ["der", "signing"] }
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }

# TLS
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }

# HTTP
axum = { version = "0.7", features = ["http1"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2"] }
tower = { version = "0.4", features = ["util"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }

# Serialisation & encoding
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = "0.4"

# CLI & errors
clap = { version = "4", features = ["derive"] }
thiserror = "1"
anyhow = "1"

# Cert parsing (client-side extraction of X.509 extension)
x509-cert = "0.2"
const-oid = "0.9"
