[package]
name = "sifir-attest"
version.workspace = true
edition.workspace = true

[dependencies]
p384.workspace = true
ecdsa.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
hex.workspace = true
thiserror.workspace = true
anyhow.workspace = true
x509-cert.workspace = true
const-oid.workspace = true

[dev-dependencies]
rand_core.workspace = true
