[package]
name = "sifir-client"
version.workspace = true
edition.workspace = true

[dependencies]
sifir-attest = { path = "../sifir-attest" }
tokio.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
sha2.workspace = true
thiserror.workspace = true
anyhow.workspace = true
clap.workspace = true
x509-cert.workspace = true
const-oid.workspace = true
hex.workspace = true
